<resources>

    <string name="app_name">MidtermApp</string>
    <string name="title">Let\'s calculate general taxes!</string>
    <string name="input">You have selected:  </string>
    <string name="pst">Provincial Sales Tax:</string>
    <string name="gst">Good and Services Tax:</string>
    <string name="hst">Harmonized Sales Tax:</string>
    <string name="pst_percent">PST (</string>
    <string name="gst_percent">GTS (</string>
    <string name="hst_percent">HST (</string>
    <string name="percent_plus_parenthesis">% )</string>

    <string name="total">TOTAL: C$</string>

    <string name="test">Go to the second activity</string>

    <string-array name="spinner">
        <item>Select your province/territory</item>
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
        <item>Yukon</item>
    </string-array>

</resources>
